# qualcomm_rb5_mbot

./: README.md
rb5_ros2-fa24_cse276a/hw2/: CMakeLists.txt
rb5_ros2-fa24_cse276a/hw2/src/: hw1_solution.py  hw2_solution.py  mpi_twist_control_node.py
rb5_ros2-fa24_cse276a/rb5_control/: CMakeLists.txt  package.xml
rb5_ros2-fa24_cse276a/rb5_control/launch/: hw1_solution.launch
rb5_ros2-fa24_cse276a/rb5_control/src/: hw1_solution.py  hw2_solution.py  hw3_solution.py  hw4_path.ipynb  hw4_solution.py  hw5_solution.py  mpi_twist_control_node.py
rb5_ros2-fa24_cse276a/rb5_ros2_control/: CMakeLists.txt
rb5_ros2-fa24_cse276a/rb5_ros2_control/src/: homework2.py  hw1_hyunjin.py
rb5_ros2-fa24_cse276a/ros2_april_detection/src/: april_detection_node.cpp
